--- a/houses.html
+++ b/houses.html
@@ -385,8 +385,8 @@ border-color:#E1E1E1;
 		var mend = "news_cn";
 		var metd = "others_cn"
 		
-		var host = "http://fnjtx.free.natapp.cc/";
-	//	var host = "http://localhost/";
+	//	var host = "http://fnjtx.free.natapp.cc/";
+		var host = "http://www.4founder.com.au/";
 		
 		$.get("./header-full.htm", function(data){ $("#header-one-line").html(data);});
 		$.get("./footer-full.htm", function(data){ $("#footer-full").html(data);});
