--- a/news.html
+++ b/news.html
@@ -310,7 +310,7 @@ $.jvfrm_home_ajaxShortcode( 'jvfrm_home_scd9ce327386ad31c463b7764ae975faf4f', {"
 		var mend = "news_cn";
 		var metd = "others_cn"
 		
-		var host = "http://fnjtx.free.natapp.cc/";
+		var host = "http://www.4founder.com.au/";
 	//	var host = "http://localhost/";
 		
 		$.get("./header-full.htm", function(data){ $("#header-one-line").html(data);});
