--- a/header-full.htm
+++ b/header-full.htm
@@ -18,7 +18,7 @@
 													</div>
 						<div class="navbar-brand-wrap col-xs-7 col-sm-3">
 							<div class="navbar-brand-inner">
-								<a class="navbar-brand" href="http://www.baidu.com" data-origin="60px" style="height:60px;line-height:60px;">
+								<a class="navbar-brand" href="http://www.4founder.com.au" data-origin="60px" style="height:60px;line-height:60px;">
 									<img src="./img/4Founder-logo.jpg" ></img>								</a>
 										<div class="javo-toolbar-left">
 			<div></div>
@@ -38,11 +38,13 @@
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse" id="javo-navibar">
 						<ul id="menu-main" class="nav navbar-nav navbar-left jv-nav-ul"><li id="menu-item-22" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-5 current_page_item menu-item-22 active"><a style="color:#FFF" title="主页" href="index.html">主页</a></li>
-<li id="menu-item-19" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-19"><a style="color:#FFF"  title="地产项目" href="/realestate/houses.html">地产项目</a></li>
-<li id="menu-item-20" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-20"><a style="color:#FFF"  title="地产资讯" href="/realestate/news.html">地产资讯</a></li>
-<li id="menu-item-21" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-21"><a style="color:#FFF"  title="开发项目" href="/realestate/development.html">开发项目</a></li>
-<li id="menu-item-18" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-18"><a style="color:#FFF"  title="关于我们" href="/realestate/aboutus.html">关于我们</a></li>
-<li id="menu-item-17" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-17"><a style="color:#FFF"  title="联系我们" href="/realestate/contactus.html">联系我们</a></li>
+<li id="menu-item-19" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-19"><a style="color:#FFF"  title="地产项目" href="houses.html">地产项目</a></li>
+<li id="menu-item-20" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-20"><a style="color:#FFF"  title="地产资讯" href="news.html">地产资讯</a></li>
+							<li id="menu-item-23" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-21"><a style="color:#FFF"  title="开发项目" href="development.html">开发项目</a></li>
+							<li id="menu-item-22" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-21"><a style="color:#FFF"  title="留学移民" href="development.html">留学移民</a></li>
+							<li id="menu-item-21" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-21"><a style="color:#FFF"  title="4Founder Tech" href="development.html">4Founder Tech</a></li>
+<li id="menu-item-18" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-18"><a style="color:#FFF"  title="关于我们" href="aboutus.html">关于我们</a></li>
+<li id="menu-item-17" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-17"><a style="color:#FFF"  title="联系我们" href="contactus.html">联系我们</a></li>
 </ul>
 						
 						<ul class="nav navbar-nav navbar-right hidden-xs" id="javo-header-featured-menu">
