--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@ color:#000000;
 		var metd = "others_cn"
 		
 	//	var host = "http://localhost/"
-		var host = "http://fnjtx.free.natapp.cc/";
+		var host = "http://www.4founder.com.au/";
 		
 		$.get("./header-full.htm", function(data){ $("#header-one-line").html(data);});
 		$.get("./footer-full.htm", function(data){ $("#footer-full").html(data);});
