--- a/footer-full.htm
+++ b/footer-full.htm
@@ -116,8 +116,8 @@
 				</a>
 				</p><ul>
 				<li style="color: #FFF"><i class="icon iconfont" style="font-size:15px;color: #FFF">&#xf0019;</i> 66 Thomas Drive, Chevron Island Surfers Paradise  QLD 4217</li>
-				<li><i class="icon iconfont" style="font-size:15px;color: #FFF">&#xf0021;</i> +61 4 8877 8298</li>
-				<li><i class="icon iconfont" style="font-size:15px;color: #FFF">&#xe611;</i> +61 449 110 725</li>
+				<li><i class="icon iconfont" style="font-size:15px;color: #FFF">&#xf0021;</i> +07 5539 0899</li>
+				<li><i class="icon iconfont" style="font-size:15px;color: #FFF">&#xe611;</i> +61 488 778 298</li>
 			
 				<li><i class="icon iconfont" style="font-size:12px;color: #FFF">&#xe60a;</i><a href="mailto:info@4founder.com.au">info@4founder.com.au</a></li>
 				<li><i class="icon iconfont" style="font-size:15px;color: #FFF">&#xe6b0;</i> 08:30AM - 17:00PM</li>
