--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@ img.emoji {
 	<link rel="stylesheet" href="./css/font-awesome.min.css">
 <style>
 .container1{
-height:350px;
+height:500px;
 }
 .slider-content{
-height:350px;
+height:500px;
 }
 	#pre,#next{
 	font-size:120px;
@@ -306,7 +306,7 @@ color:#000000;
 <meta property="og:image" content="https://s0.wp.com/i/blank.jpg">
 <meta name="twitter:card" content="summary">
 
-<style id="custom-css-css">#author-info{display:none}.jv-single-footer-author{display:none}.author-avatar{display:none}#jv-single-author-title{display:none}.author-background{display:none}.jv-single-section-title{display:none}.author-name{display:none}.section-title{display:none}.meta-author{display:none}.meta-date{display:none}.javo-shortcode .module.javo-module2 p,.javo-shortcode .module.javo-module2 ul.module-meta{display:none}.javo-shortcode .module.javo-module2 ul.module-meta{display:none}.glyphicon.glyphicon-user{display:none}.javo-shortcode .module.javo-module1.media .media-body .module-meta li{display:none}.javo-shortcode .module.javo-module2 .meta-excerpt{display:none}.article.post section.jv-single-post-contents .wp-caption,article.post section.jv-single-post-contents img,article.page section.jv-single-post-contents .wp-caption,article.page section.jv-single-post-contents img{max-width:100%;margin:auto;height:auto}#header-one-line .javo-main-navbar .container .container-fluid .navbar-header .navbar-brand-wrap a.navbar-brand img{max-width:250px;max-height:150%}#header-one-line .javo-main-navbar .container .container-fluid .navbar-header .navbar-brand-wrap a.navbar-brand{padding-right:80px}html,body,h1,h2,h3,h4,h5,h6{font-family:Tahoma, Helvetica, Arial, "Microsoft Yahei", "Î¢ÈíÑÅºÚ", sans-serif}</style>
+<style id="custom-css-css">#author-info{display:none}.jv-single-footer-author{display:none}.author-avatar{display:none}#jv-single-author-title{display:none}.author-background{display:none}.jv-single-section-title{display:none}.author-name{display:none}.section-title{display:none}.meta-author{display:none}.meta-date{display:none}.javo-shortcode .module.javo-module2 p,.javo-shortcode .module.javo-module2 ul.module-meta{display:none}.javo-shortcode .module.javo-module2 ul.module-meta{display:none}.glyphicon.glyphicon-user{display:none}.javo-shortcode .module.javo-module1.media .media-body .module-meta li{display:none}.javo-shortcode .module.javo-module2 .meta-excerpt{display:none}.article.post section.jv-single-post-contents .wp-caption,article.post section.jv-single-post-contents img,article.page section.jv-single-post-contents .wp-caption,article.page section.jv-single-post-contents img{max-width:100%;margin:auto;height:auto}#header-one-line .javo-main-navbar .container .container-fluid .navbar-header .navbar-brand-wrap a.navbar-brand img{max-width:250px;max-height:150%}#header-one-line .javo-main-navbar .container .container-fluid .navbar-header .navbar-brand-wrap a.navbar-brand{padding-right:0px}html,body,h1,h2,h3,h4,h5,h6{font-family:Tahoma, Helvetica, Arial, "Microsoft Yahei", "Î¢ÈíÑÅºÚ", sans-serif}</style>
 <style type="text/css" data-type="vc_shortcodes-custom-css">.vc_custom_1474606102786{margin-bottom: 0px !important;border-bottom-width: 0px !important;}.vc_custom_1474605917648{margin-bottom: 0px !important;border-bottom-width: 0px !important;}.vc_custom_1474605981977{margin-bottom: 0px !important;border-bottom-width: 0px !important;}.vc_custom_1474605926479{margin-top: 0px !important;}.vc_custom_1474605991349{margin-top: 0px !important;border-top-width: 0px !important;border-right-width: 0px !important;border-bottom-width: 0px !important;border-left-width: 0px !important;padding-top: 0px !important;padding-right: 0px !important;padding-bottom: 0px !important;padding-left: 0px !important;}</style><noscript>&lt;style type="text/css"&gt; .wpb_animate_when_almost_visible { opacity: 1; }&lt;/style&gt;</noscript>
 </head>
 <body class="home page page-id-5 page-template-default wide-full container-shadow footer-wide body-logged-out javo-header-type-slider full-width single-author type-a wpb-js-composer js-comp-ver-4.12 vc_responsive no-sticky  pace-done" style="background-color: #000;"><div class="pace  pace-inactive"><div class="pace-progress" data-progress-text="100%" data-progress="99" style="width: 100%;">
@@ -355,6 +355,7 @@ color:#000000;
 			<div class="vc_row wpb_row vc_row-fluid"><div class="wpb_column vc_column_container vc_col-sm-12">
 			<div class="vc_column-inner "><div class="wpb_wrapper">
 	<div class="wpb_text_column wpb_content_element ">
+		<div style="height:80px"></div>
 		<div class="wpb_wrapper">
 			<h1 style="text-align: center; color: #FFF">æœ€æ–°é¡¹ç›®</h1>
 
